samples/_failures_safe/1761313012_edbc27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84693f17.c: In function ‘main’:
./samples/SAFE/__tmp_84693f17.c:134:17: error: expected ‘;’ at end of input
  134 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_84693f17.c:134:9: error: expected declaration or statement at end of input
  134 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_84693f17.c:134:9: error: expected declaration or statement at end of input
